chore(journey): rethink printable layout

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -4,13 +4,19 @@ title: "Filip Kaštovský"
 ---
 
 import SocialIcon from "@/components/SocialIcon.astro";
+import { Icon } from "astro-icon";
+
+---
+
+<div class="grid grid-cols-2 w-2/3">
+<Icon name="tabler:world" />: **filipkastovsky.github.io**
 
 <SocialIcon name="Github" />: **github.com/filipkastovsky**
 
 <SocialIcon name="LinkedIn" />: **linkedin.com/in/filipkastovsky**
 
 <SocialIcon name="Mail" />: **devfilipkastovsky@gmail.com**
-
+</div>
 ---
 
 ## Experience and Education
@@ -30,7 +36,6 @@ Apr, 2020 - Jan, 2022
 - Eliminating client-side performance bottlenecks
 - Delivering multiple apps from initial commit to production
 - Leading a small team of talented engineers and mentoring junior colleagues
-- Making and acting out critical design decisions
 - Utilizing effective devops practices to reduce friction in the development process
 
 ### Software developer, **Forseti Home Systems s.r.o.**
@@ -41,20 +46,33 @@ Sep, 2019 - Mar, 2020
 - Designing and integrating REST/GraphQL APIs with the frontend
 - Enforcing code quality with automated tools
 
+---
+
 ## Expertise
 
+<div class="grid grid-cols-2">
+<div>
 ### Frontend
 
-React, Preact, Next.js, SolidJS, Astro, React Native, Expo, TailwindCSS, CSS-in-JS, Testing Library, Redux, webworkers, i18n, SEO, analytics, webvitals, a11y, microfrontends, ...
+React, Preact, Next.js, SolidJS, Astro, React Native, Expo, TailwindCSS, CSS-in-JS, Testing Library, Redux, webworkers, i18n, SEO, analytics, webvitals, a11y, ...
 
+</div>
+<div>
 ### Backend
 
-NodeJS, Fastify, NestJS, Actix Web, Rust, SQL, Redis, OIDC, OAuth2, OpenAPI, REST, GraphQL, gRPC, WebSockets, WebRTC, SOA, serverless, event-driven architecture, microservices, ...
+NodeJS, Fastify, NestJS, Actix Web, Rust, SQL, Redis, OIDC, OAuth2, OpenAPI, REST, GraphQL, gRPC, WebSockets, WebRTC, SOA, serverless ...
 
+</div>
+<div>
 ### Other
 
-CI/CD, testing, IaC, Git, Github/Gitlab, AWS, Nginx, Linux, Docker, Kubernetes, Sentry, Grafana, NX, Turborepo, ...
+CI/CD, testing, IaC, Git, Github/Gitlab, AWS, Nginx, Linux, Docker, Kubernetes, Sentry, NX, Turborepo, ...
 
+</div>
+<div>
 ### Languages
 
-TypeScript, Rust, Haskell, Python, Java (, English, Czech 😁)
+TypeScript, Rust, Haskell, Python, Java (, English, Czech)
+
+</div>
+</div>
